@@ -2,7 +2,7 @@
 
 use warnings;
 use strict;
-use Test::More tests => 14;
+use Test::More;
 use URI::file;
 
 BEGIN {
@@ -29,6 +29,10 @@ $mech->set_visible( [ radio => 'wongo!' ], 'boingo' );
 is( $mech->value( 'wango' ), 'wongo!', 'wango changed' );
 is( $mech->value( 'dingo', 2 ), 'boingo', 'dingo changed' );
 
+ok( ! $mech->value( 'textarea_name' ), 'textarea is empty' );
+$mech->field( 'textarea_name' => 'foobar' );
+is( $mech->value( 'textarea_name' ), 'foobar', 'textarea has been populated' );
+
 for my $name (qw/__no_value __value_empty/) {
     ok( ! $mech->value( $name ), "$name is empty" ) or diag $mech->field($name);
     $mech->field( $name, 'foo');
@@ -43,3 +47,5 @@ for my $name (qw/__value/) {
     $mech->field( $name, 'foo');
     is( $mech->value( $name ), 'foo', "$name changed" );
 }
+
+done_testing;
